[gd_scene load_steps=4 format=3 uid="uid://c8x1gsdpkla8s"]

[ext_resource type="Script" path="res://map/tile/tile.gd" id="1_1tj22"]
[ext_resource type="Script" path="res://map/tile/switch_handler.gd" id="2_gy37g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pryik"]
size = Vector2(32, 32)

[node name="Tile" type="Node2D" node_paths=PackedStringArray("switch_handler") groups=["tiles"]]
script = ExtResource("1_1tj22")
switch_handler = NodePath("SwitchHandler")

[node name="District" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="SwitchHandler" type="Node2D" parent="." node_paths=PackedStringArray("on_tile")]
script = ExtResource("2_gy37g")
on_tile = NodePath("..")

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("RectangleShape2D_pryik")

[connection signal="input_event" from="ClickArea" to="." method="_on_mouse_input"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_mouse_exited"]
